src/styles/Modal.scss
.modalWrapper {
  background: white;
  border: 1px solid #d0cccc;
  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
  margin: 0px auto 0px 3%;
  transition: all 0.8s;
  position: fixed;
  z-index: 30;
  width: 94%;
  height: 83.7%;

  display: grid;
  grid-template-columns: 20% 80%;
  grid-template-rows: 60px 1fr;
  grid-template-areas:
    " head head "
    " map detail ";
  overflow-x: hidden;
  // overflow-y: hidden;
  border: none;
}

@media screen and (max-width: 853px) {
  .modalWrapper {
    margin: 0px auto 0px 5%;
    width: 90%;
    top: 10px;
    height: 94%;
    grid-template-rows: 60px 2fr;
  }
}

.modalWrapper > .modalHeader {
  grid-area: head;
}

.modalWrapper > .navBar {
  grid-area: map;
}

.modalWrapper > .businessDetails {
  grid-area: detail;
}

.modalHeader {
  background: var(--dark-mint);
  height: 40px;
  line-height: 0.8rem;
  padding: 10px 20px;
  display: flex;
  justify-content: space-between;
  grid-column-start: span 1;
  grid-area: span 1;
}

.modalHeader h3 {
  color: white;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  text-align: center;
}

.modalPillsContainer {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

@media screen and (max-width: 570px) {
  .modalWrapper {
    grid-template-rows: 97px 1fr;
  }

  .businessDetails {
    font-size: 14px;
  }

  .modalHeader {
    height: 77px;
    padding: 10px;
    display: grid;
    grid-template-columns: 1fr 1fr 30px;
    grid-template-rows: 1fr 1fr;
    grid-template-areas:
      " title title button "
      " pills pills pills ";
  }

  .modalHeader h3 {
    height: 40px;
  }

  .modalHeader > h3 {
    grid-area: title;
  }

  .modalHeader > .modalPillsContainer {
    grid-area: pills;
  }

  .modalHeader > .closeModalBtn {
    grid-area: button;
  }
}

@media all and (max-width: 373px) {
  .modalHeader h3 {
    font-size: 17px;
  }
}

.closeModalBtn {
  height: 40px;
  background-color: transparent;
  border: none;
  width: 1rem;
  color: white;
  outline: none;
  cursor: pointer;
}

.modalFooter {
  background: #263238;
  padding: 15px;
}

.modalMap {
  width: 3rem;
  height: 3rem;
}

.navBar {
  position: relative;
  background-color: #263238;
  display: grid;
  grid-template-rows: 80% 20%;
  grid-template-areas:
    " tabs "
    " yelp ";
}

.backDrop {
  background-color: rgba(48, 49, 48, 0.42);
  height: 100%;
  position: fixed;
  transition: all 1.3s;
  width: 100%;
}

.leafletMarkerIcon {
  width: 15px;
  height: 15px;
  transform: translate3d(25px, 25px, 0px);

  z-index: 25;

  top: -160px;

  left: -11px;

  position: absolute;
}

.modalStar {
  margin-bottom: 2rem;
  width: 10rem;
  display: block;
  text-align: center;
  margin-left: 40px;
  margin: auto;
}

.categories {
  list-style: none;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  padding-left: 0;
  margin-bottom: 3rem;
  font-weight: bold;
}

.category {
  display: flex;
  justify-content: center;
  margin-bottom: 0.75rem;
}

.address {
  list-style: none;
  display: flex;
  margin-bottom: 2rem;
  flex-direction: column;
  width: 100%;
  padding: 0;
  align-items: center;
  font-weight: 500;
}

.info {
  color: rgba(90, 187, 158, 0.9);
  display: flex;
  width: max-content;
  margin: 1rem auto;
}

.yelpPic {
  width: 2.5rem;
  align-self: center;
}

.yelpClick {
  margin: auto;
  font-size: 0.5rem;
}

.yelpLink {
  margin-top: 1.4rem;
  color: #263238;
  display: flex;
  flex-direction: column;
  height: 5rem;
}

@media screen and (max-width: 815px) {
  .categories {
    margin-bottom: 0rem;
  }
  .address {
    margin-bottom: 0rem;
    margin-top: 0.5rem;
  }
  .info {
    padding: 0.5rem;
  }
  .modalStar {
    width: 6rem;
  }
  .yelpLink {
    margin-top: 1rem;
  }
}

#trendybtn,
#inspiredbtn,
#romanticbtn,
#cheerfulbtn,
#intimatebtn,
#classybtn,
#hipsterbtn,
#casualbtn,
#touristybtn {
  background: green;
  border: 0.2rem solid white;
  margin-right: 10px;
  position: center;
  text-align: center;
  border: none;
  color: white;
  padding: 10px 10px;
  margin-top: 5px;
  margin-bottom: 5px;
  border-radius: 40%;
  cursor: pointer;
}

.modalBackdrop {
  width: 100%;
  height: 125%;
  z-index: 15;
  position: fixed;
  background-color: black;
  margin-top: -10rem;
  margin-left: 0px;
}

@media screen and (max-width: 510px) {
  .categories,
  .info {
    font-size: 15px;
  }

  .modalStar {
    width: 7rem;
  }

  .yelpLink {
    font-size: 13px;
  }

  .yelpPic {
    width: 2.2rem;
  }
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px white;
  background-color: white;
}

::-webkit-scrollbar {
  width: 10px;
  background-color: white;
}

::-webkit-scrollbar-thumb {
  background-color: rgba(90, 187, 158, 0.8);
  background-image: rgba(90, 187, 158, 0.4);
  border-radius: 0.6rem;
}

.navContainer {
  padding-left: 0;
  margin-top: 0;
}

.modalNav {
  width: 100%;
  background-color: rgba(0, 0, 0, 0);
  border: none;
  outline: none;
  font-size: 0.8rem;
  text-decoration: none;
  color: #818181;
  display: flex;
  justify-content: center;
  cursor: pointer;
}

.modalNav:hover {
  color: #f1f1f1;
}

.modalNav:focus {
  color: #f1f1f1;
}

@media screen and (max-width: 434px) {
  .modalNav {
    font-size: 10px;
  }
}

.modalLI {
  list-style: none;
  padding-top: 5%;
}

.componentWindow {
  width: 100%;
  height: 100%;
  position: relative;
}

.businessDetails {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-areas: "details picture";
  height: 100%;
  width: 100%;
}

.detailSection {
  grid-area: details;
  margin: auto;
}

.pictureSection {
  grid-area: picture;
  height: 100%;
}

.pic {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.pictureContainer {
  height: 17rem;
  margin-bottom: 1.5rem;
}

@media screen and (max-width: 858px) {
  .businessDetails {
    display: grid;
    grid-template-columns: 100%;
    grid-template-areas:
      " picture "
      "  details ";
    height: 100%;
    width: 100%;
  }
}

.yelpLinkLI {
  list-style: none;
  display: flex;
  align-self: end;
  padding-bottom: 1rem;
}

@media screen and (max-width: 860px) {
  .navBar {
    height: 76%;
  }
}

@media screen and (max-width: 814px) {
  .navBar {
    height: 82%;
  }
}

@media screen and (max-width: 510px) {
  .navBar {
    height: 78%;
  }
}

